# DDM501-Movie-Recommendation-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RUNNER_SETUP.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-serve.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  train.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  LIGHTFM_ALGORITHM.md  MODELS.md  OPERATIONS.md  PROJECT_FLOW_VI.md
monitoring/: prometheus-rules.yml  prometheus.yml
monitoring/airflow/: Dockerfile  requirements.txt
monitoring/airflow/dags/: retrain_dag.py
monitoring/evidently/: app.py  requirements.txt
monitoring/filebeat/: filebeat.yml
monitoring/grafana/: dashboard.json  system-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yaml
monitoring/grafana/provisioning/datasources/: datasources.yaml
monitoring/kibana/: init.sh  saved-objects.ndjson
monitoring/logstash/pipeline/: recsys.conf
monitoring/mlflow/: Dockerfile
monitoring/postgres/: init-multiple-dbs.sh
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_experiments.ipynb
scripts/: gen-secrets.sh  setup_runner.sh
src/: config.py
src/data/: ingestion.py  preprocessing.py
src/evaluation/: metrics.py
src/features/: interaction.py  item_features.py  lightfm_dataset.py  user_features.py
src/models/: baseline.py  collaborative.py  content_based.py  lightfm_hybrid.py
src/serving/: app.py  logging_config.py  metrics.py  recommender.py  schemas.py  state.py
src/serving/routers/: __init__.py  health.py  prometheus.py  recommend.py  similar.py
src/training/: train.py
tests/: test_api.py  test_data.py  test_model.py
tests/integration/: test_api.py
tests/unit/: test_data.py  test_lightfm_dataset.py  test_model.py
