[project]
name = "movie-recommendation-system"
version = "0.1.0"
description = "End-to-end movie recommendation system using MovieLens dataset"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "implicit>=0.7.0",
    "pyarrow>=15.0.0",
    "fastapi[standard]>=0.100.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "mlflow>=2.12.0",
    "prometheus-client>=0.20.0",
    "joblib>=1.3.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-json-logger>=3.1.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs>=2.1.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pyrefly]
search_path = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "monitoring/evidently/*",
    "tests/*",
    # Pipeline / CLI scripts that run on real data — not unit-testable
    "src/data/ingestion.py",
    "src/features/item_features.py",
    "src/features/user_features.py",
    "src/training/train.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
